tests/test_assets/semantic/invalid/void_values/return_value.cog
does_nothing::() -> void {
}

test::() -> i32 {
    return does_nothing();
}